# Telegram-CLI

./: .gitignore  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  jobs.example.toml  pyproject.toml  requirements.txt  routes.example.yaml  webhook.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
telegram_cli/: __init__.py  __main__.py  accounts.py  cli.py  client.py  config.py  daemon.py  errors.py  forwarder.py  logger.py  routes.py  transforms.py  tui.py  utils.py
telegram_forwarder/: __init__.py  cli.py  client.py  config.py  errors.py  filters.py  forwarder.py  logger.py  state.py  utils.py
tests/: test_actions.py  test_config_yaml.py  test_exit_codes.py  test_filters.py  test_gateway.py  test_output.py  test_pagination.py  test_processors.py  test_sandbox.py
tlgr/: __init__.py  __main__.py  filters.py  ipc_client.py  transforms.py
tlgr/actions/: README.md  __init__.py  forward.py  reply.py
tlgr/cli/: __init__.py  account.py  agent.py  chat.py  completion.py  config_cmd.py  contact.py  daemon_cmd.py  job.py  media.py  message.py  profile.py  schema.py  user.py  watch.py
tlgr/core/: accounts.py  client.py  config.py  errors.py  output.py
tlgr/daemon/: ipc.py  jobs.py  launchd.py  lifecycle.py  server.py  webhook.py
tlgr/filters/: README.md  __init__.py  compose.py  content.py  context.py  message.py  temporal.py  user.py
tlgr/gateway/: README.md  __init__.py  config.py  engine.py  event.py
tlgr/jobs/: autoforward.py  autoreply.py  base.py
tlgr/processors/: README.md  __init__.py  regex.py  text.py
