[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlgr"
dynamic = ["version"]
description = "Full Telegram account control CLI — agent-friendly, daemon-based, with webhook event push"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "tlgrcli"}
]
keywords = ["telegram", "cli", "automation", "telethon", "agent", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.36.0",
    "click>=8.0",
    "aiohttp>=3.9",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "tqdm>=4.65",
]

[project.urls]
Homepage = "https://github.com/tlgrcli/tlgr"
Repository = "https://github.com/tlgrcli/tlgr"
Issues = "https://github.com/tlgrcli/tlgr/issues"

[project.scripts]
tlgr = "tlgr.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "tlgr.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["tlgr*"]
